[package]
name = "comprez_macro"
authors = ["muhd.najid.nadri@gmail.com"]
repository = "https://github.com/Najidnadri/comprez_macro"
version = "0.2.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["compress", "algorithm", "struct"]
description = "Partner in crime with comprez, a library to compress structs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
